modificando las direcciones de los links

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
         <nav>
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Productos</a></li>
-                <li><a href="">Saber mas</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#proximamente">Proximamente..</a></li>
             </ul>
         </nav>
 
@@ -43,7 +43,7 @@
     </section>
 
     <!-- Inicio de container de productos -->
-    <section class="productos-container">
+    <section id="productos" class="productos-container">
         <h2 class="title-pro-card">Productos</h2>
 
         <div class="products-container">
@@ -73,7 +73,7 @@
     </section>
 
     <!-- Inicio del footer simple.. -->
-    <footer>
+    <footer id="proximamente">
         <p>©️ Bodega Don Pepito</p>
         <p>2015 - 2024</p>
 
